--- a/sources/sections/aa-abstract-conformance.adoc
+++ b/sources/sections/aa-abstract-conformance.adoc
@@ -3,11 +3,11 @@
 == Abstract Conformance Test Suite
 
 [[annex-A-1]]
-=== Conformance Test Class: The Specification (Core)
+=== Conformance Test Class: The Core
 
 ==== Requirements are atomic and tests cover all the parts of each of the requirement
 
-All the parts of a requirement, a requirement module or requirements class shall be
+All the parts of a requirement, a requirement module, or requirements class shall be
 tested. Failure to meet any part of any requirement shall be a failure to pass the
 associated conformance test class.
 
@@ -20,7 +20,7 @@ associated conformance test class.
 
 Each component of the standard, including requirements, requirements modules,
 requirements classes, conformance test cases, conformance modules and conformance
-classes shall be assigned a URI as specified by the OGC naming authority or its
+classes shall be assigned a URI as specified by the OGC Naming Authority or its
 equivalent.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -40,7 +40,7 @@ requirements class where that use or interpretation is used.
 
 ==== Requirements have a single target
 
-Each requirement in a conformant specification shall have a single standardization
+Each requirement in a conformant standard shall have a single standardization
 target type.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -51,7 +51,7 @@ target type.
 ==== Conformance test classes have a single target
 
 All conformance tests in a single conformance test class in a conformant
-specification shall have the same standardization target.
+standard shall have the same standardization target.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -133,9 +133,9 @@ dependency.
 ==== Imported Conformance class tests are consistent with the specification
 
 If a requirements class is imported from another standard for use within a
-specification conformant to this standard, and if any imported requirement is
+standard conformant to this standard, and if any imported requirement is
 "optional," then that requirement shall be factored out as a separate requirements
-class in the profile of that imported standard used in the conformant specification.
+class in the profile of that imported standard used in the conformant standard.
 Each such used requirements class shall be a conformance class of the source
 standard or a combination of conformance classes of the source standard or standards.
 
@@ -203,7 +203,7 @@ dependencies.
 
 ==== Profiles are expressed as sets of conformance classes
 
-The conformance tests for a profile of a specification shall be defined as the union
+The conformance tests for a profile of a standard shall be defined as the union
 of a list of conformance classes that are to be satisfied by that profile's
 standardization targets.
 
@@ -214,7 +214,7 @@ standardization targets.
 
 ==== There is a named Core requirements class
 
-Every specification shall define and identify a core set of requirements as a
+Every standard shall define and identify a core set of requirements as a
 separate conformance class.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -224,7 +224,7 @@ separate conformance class.
 
 ==== General conditions are in the core
 
-Every other requirements class in a specification shall have a standardization
+Every other requirements class in a standard shall have a standardization
 target type which is a subtype of that of the core and shall have the core as a
 direct dependency.
 
@@ -235,7 +235,7 @@ direct dependency.
 
 ==== Every extension has a consistent target type
 
-Every other requirements class in a specification shall have a standardization
+Every other requirements class in a standard shall have a standardization
 target type which is a subtype of that of the core and shall have the core as a
 direct dependency.
 
@@ -244,9 +244,9 @@ direct dependency.
 . Reference: <<req-22>>
 . Test Type: Conformance.
 
-==== Specification is a core plus some number of extensions
+==== A standard is a core plus some number of extensions
 
-Each specification conformant to this standard shall consist of the core and some
+Each standard conformant to the ModSpec shall consist of the core and some
 number of requirements classes defined as extensions to that core.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -254,10 +254,10 @@ number of requirements classes defined as extensions to that core.
 . Reference: <<req-23>>
 . Test Type: Conformance.
 
-==== Conformance to this standard is required for any extensions
+==== Conformance to this ModSpec is required for any extensions
 
-A specification conformant to this standard shall require all conformant extensions
-to itself to be conformant to this standard.
+A standard conformant to the ModSpec shall require all conformant extensions
+to itself to be conformant to the ModSpec.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -266,7 +266,7 @@ to itself to be conformant to this standard.
 
 ==== Future extensions cannot be restricted
 
-A specification conformant to this standard shall never restrict in any manner
+A standard conformant to the ModSpec shall never restrict in any manner
 future, logically-valid extensions of its standardization targets.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -276,7 +276,7 @@ future, logically-valid extensions of its standardization targets.
 
 ==== Optional requirements are organized as requirements classes
 
-The only optional requirements acceptable in a specification conformant to this
+The only optional requirements acceptable in a standard conformant to this
 standard shall be expressible as a list of conformance classes to be passed.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -295,7 +295,7 @@ to other requirements classes.
 . Test Type: Conformance.
 
 [[annex-A-2]]
-=== Conformance test class: UML model extends The Specification
+=== Conformance test class: UML model extends The Standard
 
 [[annex-A-2-1]]
 ==== Dependency on Core
@@ -417,7 +417,7 @@ The UML model shall segregate all classes into leaf packages.
 ==== Dependency on Core
 
 An implementation passing the XML schema conformance test class shall first pass the
-core specification conformance test class.
+core standard conformance test class.
 
 . Test Purpose: Verify that this requirement is satisfied.
 . Test Method: Inspect the document to verify the above.
@@ -436,7 +436,7 @@ W3C Recommendation for XML schema.
 
 ==== A requirements class corresponds to a single XML namespace
 
-If a specification conformant to the XML schema conformance class defines a set of
+If a standard conformant to the XML schema conformance class defines a set of
 data schemas, all components (e.g. elements, attributes, types ...) associated with
 a single conformance test class shall be scoped to a single XML namespace.
 
@@ -457,7 +457,7 @@ associated conformance test class in the schema/annotation/appinfo element.
 
 ==== Direct dependencies become schema imports
 
-If a specification conformant to the XML schema conformance class defines a direct
+If a standard conformant to the XML schema conformance class defines a direct
 dependency from one requirement class to another, then a standardization target of
 the corresponding conformance test class shall import a schema that has passed the
 associated conformance test class (dependency) or shall itself pass the associated
@@ -470,7 +470,7 @@ conformance test class.
 
 ==== No requirements class modifies or redefines elements in another namespace
 
-No requirements class in a specification conformant to the XML schema conformance
+No requirements class in a standard conformant to the XML schema conformance
 class shall modify elements, types or any other requirement from a namespace to
 which it is not associated.
 
@@ -484,7 +484,7 @@ which it is not associated.
 
 ==== Dependency on XML Schema conformance test class
 
-A specification passing the Schematron conformance test class shall also define or
+A standard passing the Schematron conformance test class shall also define or
 reference an XML schema that shall pass the XML schema conformance class from this
 standard.
 
@@ -547,7 +547,7 @@ schema.
 
 ==== Supports the Specification class
 
-A specification passing the XML meta-schema conformance test class shall first pass
+A standard passing the XML meta-schema conformance test class shall first pass
 the core specification conformance test class.
 
 . Test Purpose: Verify that this requirement is satisfied.
@@ -557,7 +557,7 @@ the core specification conformance test class.
 
 ==== Each XML schema is conformant with the XML Schema class
 
-A specification passing the XML meta-schema conformance test class shall require
+A standard passing the XML meta-schema conformance test class shall require
 that its specification targets (XML schema) pass the XML schema conformance class
 from this standard.
 
