--- a/sources/sections/06-req-class.adoc
+++ b/sources/sections/06-req-class.adoc
@@ -1,25 +1,21 @@
-[[cls-6]]
-[[cls-8-1]]
+[[cls-8]]
+
 == ModSpec Requirements Class: Core
 
 The following requirements specify the rules for the content and structure of a modular standard. These requirements are also known as the `core` of the ModSpec.
 
+[[cls-8-1]]
+
+The following requirement states that every requirement is testable.
 
 [[req-1]]
-include::../requirements/core/REQ_standardization-goal.adoc[]
-
-include::../requirements/core/REQ_standardization-target-type.adoc[]
-
-NOTE: These two requirements establish the context and scope of this Standard. Additional informative text would be useful.  
-
-include::../requirements/core/REQ_ogc-compliance.adoc[]
-
-NOTE: This requirement is for OGC work only and will be moved to the OGC Policy statement regarding the use of the ModSpec. This move will happen once the policy is removed.
-
-[[req-1]]
-include::../requirements/core/REQ_testable.adoc[]
-
-This requirement states that every requirement is testable.
+[width="90%",cols="2,6"]
+|===
+|*REQ001* | */req/core/reqs-are-testable* +
+All the parts of a requirement, a requirements module, or requirements class _SHALL_ be
+testable. Failure to pass any part of any requirement _SHALL_ be a failure to pass the
+associated conformance test class.
+|===
 
 [NOTE]
 ====
@@ -28,9 +24,18 @@ failure to pass the requirement.
 ====
 
 [[req-2]]
-include::../requirements/core/REQ_assigned-uri.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ002* | */req/core/all-components-assigned-uri* +
+Each component of the standard, including requirements, requirements modules,
+requirements classes, conformance test cases, conformance modules and conformance
+classes _SHALL_ be assigned a URI. 
+For OGC standards documents, these URIs _SHALL_ be conformant with the https://www.ogc.org/about-ogc/policies/ogcna/[OGC Naming Authority policies].
+|===
 
-NOTE: In the OGC, the enforcement of this requirement and its associated recommendation is the purview of the OGC Naming Authority or its equivalents.
+NOTE: In the OGC, the enforcement of this requirement and its associated recommendation is the purview of
+the OGC Naming Authority or its equivalents.
 
 [[rec-1]]
 [recommendation,model=ogc,type="general"]
@@ -43,7 +48,7 @@ standards, implementations of the conformance test suite, or certificates of
 conformance for implementations conformant to the standard in question.
 |===
 
-While a requirement may be referenced in more than one place in a standard, the normative definition of a requirement shall be its "*#home#*" (see <<cls-5-3>>) and
+While a requirement may be referenced in more than one place in a standard, the normative definition of a requirement shall be its "*#home#*" (see <<cls-6-3>>) and
 will be the only place where full normative language is used.
 
 The following permissions relate to possible content specified in the core of a standard.
@@ -88,7 +93,13 @@ requested operation is part of a non-supported extension.
 The following states how and where vocabularies are specified in relation to a requirement or requirements class.
 
 [[req-3]]
-include::../requirements/core/REQ_vocabulary.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ003* | */req/core/vocabulary-and-parent-req-class* +
+Requirements on the use and interpretation of vocabulary _SHALL_ be in the
+requirements class where that use or interpretation is used.
+|===
 
 [[per-4]]
 [permission,model=ogc,type="general"]
@@ -107,7 +118,7 @@ the title of a particular document or dataset will be specified in the requireme
 class in which the request-response pair is defined and set against requirements.
 ====
 
-[[cls-6-2]]
+[[cls-8-2]]
 ==== Using the model
 
 The primary difficulty in speaking about standards (or candidate
@@ -139,7 +150,13 @@ such part separately (see the definition of requirements class in
 standard into parts more than restricting their content.
 
 [[req-4]]
-include::../requirements/core/REQ_single-standardization-target.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ004* | */req/core/single-standardization-target* +
+Each requirement in a conformant standard _SHALL_ have a single standardization
+target type.
+|===
 
 In practice, the standardization target of the core requirements class is the root
 of an inheritance tree where extensions all have the core's target as an ancestor,
@@ -147,12 +164,17 @@ and thus can be considered as belonging to the same "class" or type as the core'
 target.
 
 [[req-5]]
-include::../requirements/core/REQ_test-class-single-standardization-target.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ005* | */req/core/modspec/test-class-single-standardization-target* +
+All conformance tests in a single conformance test class in a conformant
+standard _SHALL_ have the same standardization target.
+|===
 
 This means that all requirements are considered as targeting the same entity being
 tested for a particular certificate of conformance. The test may specify other types
-as intermediaries or indirect dependencies (see
-<<term-indirect-dependency-(of-a-requirements-class)>>).
+as intermediaries or indirect dependencies (see <<term-indirect-dependency-(of-a-requirements-class)>>).
 
 [[per-5]]
 [permission,model=ogc,type="general"]
@@ -179,14 +201,13 @@ common alternative is to introduce a new "superclass".
 [width="90%",cols="2,6"]
 |===
 |*PER006* | */per/core/abstract-superclass* +
-The standard may introduce an abstract superclass of all affected standardization target types and
-use this for the requirements common to all of the affected target types. This is
-diagrammed in <<fig-6-1>>.
+The standard _MAY_ introduce an abstract superclass of all affected standardization target types and
+use this for the requirements common to all of the affected target types. This is diagrammed in <<fig-6-1>>.
 |===
 
 [[fig-6-1]]
 .Abstract superclass example
-image::img01.png[]
+image::../images/img01.png[]
 
 [[example-6-1]]
 [example]
@@ -195,19 +216,31 @@ image::img01.png[]
 
 ====
 
-[[cls-6-3]]
+[[cls-8-3]]
 ==== The "standards" document
 
 Each standard document is comprised of a set of requirements and their associated conformance tests.
 
 [[req-6]]
-include::../requirements/core/REQ_requirements-grouped.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ006* | */req/core/requirements-grouped* +
+Requirements _SHALL_ be grouped together in clauses (numbered sections) of the
+document in a strictly hierarchical manner, consistent with 
+requirements classes.
+|===
 
 [[req-7]]
-include::../requirements/core/REQ_requirements-test-suite-structure.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ007* | */req/core/requirements-test-suite-structure* +
+The requirements structure of the document _SHALL_ be in a logical correspondence to
+the test suite structure.
+|===
 
-If two requirements are
-in the same requirments class, they should be tested in the same conformance
+If two requirements are in the same requirments class, they should be tested in the same conformance
 class in the conformance suite. Each requirement is separately identifiable
 either by a label as is done in the ModSpec.
 
@@ -215,7 +248,7 @@ In summary, the structure of the requirements and requirements classes of the mo
 should be reflected in the organization of the conformance tests and classes, and
 also in the structure of the normative clauses in the specification document.
 
-[[cls-6-4]]
+[[cls-8-4]]
 ==== Conformance Test Suite
 
 The requirements specified in this clause will be applied directly to the test suite, and in particular
@@ -236,7 +269,13 @@ types, elements, or objects are defined and segregated into implementation
 requirements classes.
 
 [[req-8]]
-include::../requirements/core/REQ_requirements-correspondence.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ008* | */req/core/requirements-class-correspondence-to-conformance-classes* +
+The requirements classes _SHALL_ be in a one-to-one correspondence to the conformance test classes, 
+and thus to the various certificate of conformance types possible for a candidate implementation. 
+|===
 
 Strict parallelism of implementation and governance is the essence of this standard.
 
@@ -246,7 +285,12 @@ Strict parallelism of implementation and governance is the essence of this stand
 ===== Each Conformance class tests a complete requirements class
 
 [[req-9]]
-include::../requirements/core/REQ_no-optional-tests.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ009* | */req/core/no-optional-tests* +
+A Conformance class _SHALL_ not contain any optional conformance tests.
+|===
 
 This requirement stops
 conformance classes from containing optional requirements and tests, and, at least
@@ -260,11 +304,12 @@ recommendations.
 [width="90%",cols="2,6"]
 |===
 |*PER007* | */per/core/conf-class-paramterized* +
-A Conformance class may be parameterized.
+A Conformance class _MAY_ be parameterized.
 |===
 
 This means that the class's tests
-depend on some parameter that must be defined before the tests can be executed. This can be thought of as an "if-then-else" decision tree. 
+depend on some parameter that must be defined before the tests can be executed. This can
+be thought of as an "if-then-else" decision tree. 
 
 For example, if a conformance class needs to apply tests against a specific data format, such as GML or
 KML, then XYZ(GML) is XYZ using GML, and XYZ(KML) is XYZ using KML.
@@ -278,12 +323,24 @@ parameter, such as GML, KML or GeoJSON. When reading a certificate of conformanc
 the values of such parameters are very important.
 
 [[req-10]]
-include::../requirements/core/REQ_all-parameters-expressed.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ010* | */req/core/all-parameters-expressed* +
+A certificate of conformance _SHALL_ specify all parameter values used to pass the
+tests in its conformance test class.
+|===
 
 Conformance to a particular conformance class means exactly the same thing everywhere.
 
 [[req-11]]
-include::../requirements/core/REQ_conf-class-single-req-class.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ011* | */req/core/conf-class-single-req-class* +
+A Conformance class _SHALL_ explicitly test only requirements from a single
+requirements class.
+|===
 
 This means that there is a strict correspondence between the requirements classes
 and the conformance test classes in the test suite. Recall that a conformance test
@@ -291,7 +348,14 @@ class may specify dependencies causing other conformance test classes to be used
 but this is a result of an explicit requirement in the "home" requirements class.
 
 [[req-12]]
-include::../requirements/core/REQ_con-class-dependencies.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ012* | */req/core/con-class-dependencies* +
+A Conformance class _SHALL_ specify any other conformance class upon which it is
+dependent and that other conformance class shall be used to test the specified
+dependency.
+|===
 
 Such referenced conformance classes may be in the same standard or may be a
 conformance class of another standard.
@@ -323,14 +387,31 @@ and testing, so for use within a standard compliant to the ModSpec, special
 care must be taken in importing conformance test classes from other standards.
 
 [[req-13]]
-include::../requirements/core/REQ_imported-requirements-class.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ013* | */req/core/imported-requirements-class* +
+^| A | If a requirements class is imported from another standard for use within a
+standard conformant to the ModSpec, and if any imported requirement is
+"optional," then that requirement _SHALL_ be factored out as a separate requirements
+class in the profile of that imported standard used in the conformant standard.
+^| B | Each such used requirements class _SHALL_ be a conformance class of the source
+standard or a combination of conformance classes of the source standard or standards.
+|===
 
 The tracking of the parallelism between requirements and tests should be easy if the
 standards document is non-ambiguous. To insure this, by utilizing the names of the two types of classes the following requirement places a
 default mapping between the two.
 
 [[req-14]]
-include::../requirements/core/REQ_all-classes-explicitly-named.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+|*REQ014* | */req/core/all-classes-explicitly-named* +
+For the sake of consistency and readability, all requirements classes and all
+conformance test classes _SHALL_ be explicitly named, with corresponding requirements
+classes and conformance test classes having similar names.
+|===
 
 Logically, a requirements class (set of requirements) and a conformance class (set
 of tests) are not comparable. This can be remedied by noting that both have a
@@ -338,11 +419,21 @@ consistent relation to a set of requirements. A requirements class is a set of
 requirements. A conformance class tests a set of requirements. Therefore a requirements class corresponds precisely to a conformance class if they
 both are related (as described) to the same set of requirements.
 
+
 [[cls-6-5-2]]
 ==== Requirements classes contain all requirements tested by a conformance test case
 
 [[req-15]]
-include::../requirements/core/REQ_req-in-only-one-req-class.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ015* | */req/core/req-in-only-one-rec-class* +
+^| A | Each requirement in the standard _SHALL_ be contained in one and only one
+requirements class. 
+^| B | Inclusion of any requirement in a requirements class by a
+conformance class _SHALL_ imply inclusion of all requirements in its class (as a
+dependency).
+|===
 
 Unless a requirement is referenced in a conformance test and thus in a conformance
 class, it cannot be considered a requirement since no test has been defined for it.
@@ -364,7 +455,15 @@ here, since a single requirement can be stated twice in different requirements
 classes.
 
 [[req-16]]
-include::../requirements/core/REQ_co-dependent-requirements.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ016* | */req/core/co-dependent-requirements* +
+^| A | If any two requirements are co-dependent (each
+dependent on the other) then they _SHALL_ be in the same requirements class. 
+^| B | If any
+two requirements classes are co-dependent, they _SHALL_ be merged into a single class.
+|===
 
 Normally, circular dependencies between implementation components are signs of a
 poor design, but they often cannot be avoided because of other considerations (code
@@ -375,16 +474,22 @@ ownership for example).
 [width="90%",cols="2,6"]
 |===
 |*REC003* | */rec/core/circular-dependencies* +
-Circular dependencies of all types should be avoided whenever possible.
+Circular dependencies of all types _SHOULD_ be avoided whenever possible.
 |===
 
 [[req-17]]
-include::../requirements/core/REQ_structure-requirements-classes.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+*REQ017* | */req/core/structure-requirements-classes* +
+There _SHALL_ be a natural structure to the requirements classes so that each may be
+implemented on top of any implementations of its dependencies and independent of its
+extensions.
+|===
 
 [NOTE]
 ====
-The only certain manner to test this requirement maybe to create a reference
-implementation.
+The only certain manner to test this requirement maybe to create a reference implementation.
 ====
 
 This requirement is more important and may be more difficult than it seems. It
@@ -396,8 +501,16 @@ other benefit can still do what they want; the requirement here only states that
 the software requirements classes are properly separated, they can be implemented in
 a "plug'n'play" fashion.
 
+
 [[req-18]]
-include::../requirements/core/REQ_requirements-and-dependencies.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ018* | */req/core/requirements-and-dependencies* +
+No requirements class _SHALL_ redefine the requirements of its dependencies, unless
+that redefinition is for an entity derived from but not contained in those
+dependencies.
+|===
 
 This means, for example, that a UML classifier cannot be redefined in a new
 extension. If a new version of the classifier is needed it has to be a valid subtype
@@ -406,12 +519,13 @@ of the original.
 In terms of generalization, subclassing, extension and restriction (into a new class
 or type) are all acceptable, redefinition (of an old class or type) is not.
 
-<<cls-6-3>> makes some pointed suggestion as to how to organize the conformance
+<<cls-8-3>> makes some pointed suggestion as to how to organize the conformance
 classes and normative clauses in parallel to make this requirement easier to verify.
 
 Most standards include examples, which are useful for illustrative or pedagogical
 purposes. However, it is not possible to write a standard "by example" that
 leads to conformance tests. Examples are therefore non-normative, by definition.
+
 
 [[cls-6-5-3]]
 ==== Profiles are defined as sets of conformance classes
@@ -422,19 +536,44 @@ of all conformance classes) for defining profiles as defined in ISO/IEC 10000 (s
 requirements classes.
 
 [[req-19]]
-include::../requirements/core/REQ_profile-conformance.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ019* | */req/core/profile-conformance* +
+The conformance tests for a profile of a standard _SHALL_ be defined as the
+union of a list of conformance classes that are to be satisfied by that profile's
+standardization targets.
+|===
 
 [[cls-6-5-4]]
 ==== There is a Defined Core
 
 [[req-20]]
-include::../requirements/core/REQ_core-requirements-separate.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ020* | */req/core/core-requirements-separate* +
+Every standard _SHALL_ define and identify a core set of requirements as a
+separate conformance class.
+|===
 
 [[req-21]]
-include::../requirements/core/REQ_requirements-and-dependencies-2.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ021* | */req/core/requirements-and-dependencies* +
+All general recommendations _SHALL_ be in the core.
+|===
 
 [[req-22]]
-include::../requirements/core/REQ_requirements-and-dependencies-3.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ022* | */req/core/requirements-and-dependencies* +
+^| A |Every other requirements class in a standard _SHALL_ a standardization
+target type which is a subtype of that of the core 
+^| B | And every requirement class _SHALL_ have the core as a direct dependency.
+|===
 
 [[rec-4]]
 [recommendation,model=ogc,type="general"]
@@ -494,14 +633,25 @@ Features."
 A common mechanism to extend the functionality of a standard is to define
 extensions, which may be either local or encompass other standards. 
 
-*#Standards
-should use extensions as required and feasible, but should never hinder them.#*
+Standards should use extensions as required and feasible, but should never hinder them.
 
 [[req-23]]
-include::../requirements/core/REQ_core-and-extensions.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ023* | */req/core/core-and-extensions* +
+Each standard conformant to the ModSpec _SHALL_ consist of the core and some
+number of requirements classes defined as extensions to that core.
+|===
 
 [[req-24]]
-include::../requirements/core/REQ_extensions-conformant-to-modspec.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ024* | */req/core/extensions-conformant-to-the-modspec* +
+A standard conformant to the ModSpec _SHALL_ require all conformant extensions
+to itself to be conformant to the ModSpec.
+|===
 
 Since software is evolutionary at its best, it would not be wise to restrict that
 evolutionary tendency by restricting the specification of extensions. A
@@ -510,7 +660,13 @@ will never list things that a standardization target might want to do above and
 beyond the current design requirements.
 
 [[req-25]]
-include::../requirements/core/REQ_restriction-of-extensions.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ025* | */req/core/restriction-of-extensions* +
+A standard conformant to the ModSpec _SHALL_ never restrict in any manner
+future, logically valid extensions of its standardization targets.
+|===
 
 The above requirement should not be interpreted as a restriction on quality
 control. Any efforts by a standard to enforce a level of quality on its
@@ -528,7 +684,12 @@ the fundamental intent of the standard.
 ==== Optional requirements are organized as requirements classes
 
 [[req-26]]
-include::../requirements/core/REQ_optional-requirements.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ026* | */req/core/optional requirements* +
+The only conditional requirements acceptable in a standard conformant with the ModSpec _SHALL_ be expressible as a list of conformance classes to be passed.
+|===
 
 NOTE: Standards and implementations are restricted by this, but not instances of
 schemas. For example, a XML schema standard can specify an optional element, which
@@ -536,14 +697,20 @@ data instances may use or not. However schema-aware processors claiming conforma
 to the standard should be able to handle all elements defined in the schema, whether
 they are required by the schema or not.
 
-*#Requirements of the form "if the implementation does this, it must do it this way"
-are considered to be options and should be in a separate requirements class.#*
+Requirements of the form "if the implementation does this, it must do it this way"
+are considered to be options and should be in a separate requirements class.
 
 [[cls-6-5-7]]
 ==== Requirements classes intersect overlap only by reference
 
 [[req-27]]
-include::../requirements/core/REQ_req-class-overlap-by-reference.adoc[]
+[requirement,model=ogc,type="general"]
+[width="90%",cols="2,6"]
+|===
+^|*REQ027* | */req/core/req-class-overlap-by-reference* +
+The common portion of any two requirements classes _SHALL_ consist only of references
+to other requirements classes.
+|===
 
 This implies that each requirement is directly in exactly one requirements class and
 all references to that requirement from another requirements class must include its
